Fix border radius on iOS

--- a/projects/DigitPop-Player/src/app/video/video.component.scss
+++ b/projects/DigitPop-Player/src/app/video/video.component.scss
@@ -705,6 +705,7 @@
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
 
 .coin-shine:after {
